--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.54MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-352.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.78MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇭🇰 香港-2.68MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 捷克-1.56MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-337.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-902.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-151.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-234.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.51.171, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.66MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
-      - 捷克-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
