--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇦 加拿大-902.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-151.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-234.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.51.171, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-560.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.66MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
   - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.66MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-228.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-1.68MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-451.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.1KB/s(Youtube:不良林)
+      - 捷克-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
