--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-444.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇫🇷 法国-467.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-234.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.86MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef4eb420-0eee-47d5-a202-e87e743a038e, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-423.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-212.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-759.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-230.3KB/s(Youtube:不良林), server: 629hk.ok365.cyou, port: 443, type: trojan, password: ef4eb420-0eee-47d5-a202-e87e743a038e, sni: 629hk.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-444.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
       - 🇫🇷 法国-467.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-234.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇯🇵 日本-759.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-230.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
